--- a/vercel.json
+++ b/vercel.json
@@ -15,18 +15,8 @@
     }
   ],
   "routes": [
-    {
-      "src": "/api/generate",
-      "dest": "/api/generate.py",
-      "methods": ["POST"]
-    },
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/index.html"
-    }
+    { "src": "/api/generate", "dest": "/api/generate.py" },
+    { "src": "/static/(.*)", "dest": "/static/$1" },
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
