--- a/vercel.json
+++ b/vercel.json
@@ -15,8 +15,17 @@
     }
   ],
   "routes": [
-    { "src": "/api/generate", "dest": "/api/generate.py" },
-    { "src": "/static/(.*)", "dest": "/static/$1" },
-    { "src": "/(.*)", "dest": "/public/index.html" }
+    {
+      "src": "/api/generate",
+      "dest": "/api/generate.py"
+    },
+    {
+      "src": "/static/(.*)",
+      "dest": "/static/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
+    }
   ]
 }
